--- a/style.css
+++ b/style.css
@@ -605,4 +605,20 @@ body {
   .content nav form.show ~ .profile {
     display: none;
   }
+
+  .content main .insights {
+    grid-template-columns: 1fr;
+  }
+
+  .content main .bottom-data .header {
+    min-width: 340px;
+  }
+
+  .content main .bottom-data .orders table {
+    min-width: 340px;
+  }
+
+  .content main .bottom-data .reminders .task-list {
+    min-width: 340px;
+  }
 }
